[package]
name = "dexterous_developer_types"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
config = ["dep:tokio", "dep:toml"]

[dependencies]
serde = { version = "1", features = ["derive"]}
tracing = { version = "0.1" }
thiserror = { workspace= true }
uuid = { version = "1.8", features = ["serde"]}
camino ={ version = "1", features = ["serde1"] }
tokio = { workspace= true, features = ["full"], optional = true }
toml = { version = "0.8", optional = true }
