[package]
name = "hot-reload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
hot = ["reload-macros/hot"]


[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "serialize",
] }
libloading = "0.8"
reload-macros = { path = "../reload-macros" }
crossbeam = "0.8"
tempfile = "3"
uuid = "1"
bevy_hot_winit = { path = "../bevy_hot_winit" }
serde = "1"
rmp-serde = "1"
