[package]
name = "hot_reload_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_hot_reload_example"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]

bevy = { version = "0.11" }
bevy-inspector-egui = "*"
hot-reload = { path = "../hot-reload", features = ["hot"] }
serde = "*"
