[package]
name = "bevy_dexterous_developer"
edition = "2021"
readme = "../../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
hot = [
    "bevy_dexterous_developer_library/hot",
    "dep:bevy_dexterous_developer_dynamic"
]

[dependencies]
bevy_dexterous_developer_library = { version = "0.4.0-alpha.3", path = "crates/bevy_dexterous_developer_library" }
bevy_dexterous_developer_dynamic = { version = "0.4.0-alpha.3", path = "crates/bevy_dexterous_developer_dynamic", optional = true }

[dev-dependencies]
bevy = { version = "0.14", default-features = true, features=["dynamic_linking", "embedded_watcher"] }
dexterous_developer_test_utils = { version = "0.4.0-alpha.3", path = "../../dexterous_developer_test_utils"}
tokio = { version = "1", features = ["full"]}
test-temp-dir = { version = "0.2"}
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tracing = "0.1"
serde = "1"