[package]
name = "xilem_dexterous_developer"
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
hot = [
    "xilem_dexterous_developer_library/hot"
]
hot_internal = [
    "xilem_dexterous_developer_library/hot_internal",
    "dep:xilem_dexterous_developer_dynamic"
]

[dependencies]
xilem_dexterous_developer_library = { version = "0.3.0-pre.1", path = "crates/xilem_dexterous_developer_library" }
xilem_dexterous_developer_dynamic = { version = "0.3.0-pre.1", path = "crates/xilem_dexterous_developer_dynamic", optional = true }

[dev-dependencies]
xilem = { git = "https://github.com/linebender/xilem" }
serde = "1"

[[example]]
name = "todo"
crate-type = ["dylib"]