[package]
name = "dexterous_developer_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dexterous_developer = { path = "../../dexterous_developer" }
cli-sandbox = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[[bin]]
name = "run_tests"
path = "src/main.rs"
