[package]
name = "dexterous_developer_tests"
version = "0.2.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"


[[bin]]
name = "run_tests"
path = "src/main.rs"