[package]
name = "asset_test"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_asset_test"
crate-type = ["rlib"]


[dependencies]
thiserror = "*"

bevy = { version = "0.13", default_features = false, features = [
    "bevy_asset",
    "multi-threaded",
    "file_watcher",
] }
dexterous_developer = { path = "../../../dexterous_developer", features = ["bevy"]}

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]