[package]
name = "asset_test"
version = "0.3.0-pre.1"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "dylib"]



[dependencies]
thiserror = "*"

bevy = { version = "0.13", default_features = false, features = [
    "bevy_asset",
    "multi-threaded",
    "file_watcher",
] }
bevy_dexterous_developer = { path = "../../../bevy_dexterous_developer" }


[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher", "bevy_dexterous_developer/hot_internal"]