[package]
name = "example_cli_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_example_cli_test"
crate-type = ["rlib"]


[dependencies]
bevy = { version = "0.12", default_features = false }
dexterous_developer = { path = "../../../dexterous_developer", features = ["bevy"] }

[workspace]

[[example]]
name = "reload_example"
path = "examples/reload_example.rs"
crate-type = ["dylib"]
