[package]
name = "example_cli_test"
version = "0.2.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_example_cli_test"
crate-type = ["rlib"]


[dependencies]
bevy = { version = "0.13", default_features = false }
bevy_dexterous_developer = { path = "../../../bevy_dexterous_developer" }

[[example]]
name = "reload_example"
path = "examples/reload_example.rs"
crate-type = ["dylib"]

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher", "bevy_dexterous_developer/hot_internal"]